--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -4,13 +4,10 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:text="ChartFragment"
+        android:text="About"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        style="@style/ItemText.Black.Larger"/>
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ItemText.Black.Larger"
         />
 </RelativeLayout>
