--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -4,7 +4,10 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:text="ListFragment"
+        android:text="Timeline"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        style="@style/ItemText.Black.Larger"
+        />
 </RelativeLayout>
