--- a/app/src/main/res/menu/bottombar_menu.xml
+++ b/app/src/main/res/menu/bottombar_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/bb_menu_list"
-        android:icon="@drawable/ic_list"
+        android:id="@+id/bb_menu_main"
+        android:icon="@drawable/ic_main"
         android:title="列表" />
     <item
         android:id="@+id/bb_menu_chart"
