--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,17 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionBarStyle">@style/ActionbarStyle</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="ActionbarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:titleTextStyle">@style/TitleStyle</item>
+    </style>
+    <style name="TitleStyle">
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -110,6 +119,16 @@
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_marginBottom">-4dp</item>
         <item name="android:background">@drawable/wave</item>
+    </style>
+    <style name="ConsumerDetail.EditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/margin_large</item>
+        <item name="android:layout_marginRight">@dimen/margin_large</item>
+        <item name="android:layout_marginTop">@dimen/margin_normal</item>
+        <item name="android:textCursorDrawable">@drawable/text_cursor_cyan</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:textColorHint">@color/primary_light</item>
     </style>
 
 
