add timeline layout

--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent" >
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/timeline_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </RelativeLayout>
