home business logic

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,3 +9,4 @@
     android:background="?attr/colorPrimary"
     app:popupTheme="@style/AppTheme.PopupOverlay"
     />
+    <!--app:layout_scrollFlags="scroll|enterAlways"-->
