--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,6 @@
     <color name="gray" >#939393</color>
     <color name="gray_dark" >#5F5F5F</color>
     <color name="black" >#323232</color>
+
+    <color name="timeline_blue">#ff90ebfe</color>
 </resources>
