--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent" >
 
     <TextView
+        android:id="@+id/chart_tv"
         android:text="ChartFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
