--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:scrollbars="none">
 
-    <TextView
-        android:id="@+id/chart_tv"
-        android:text="ChartFragment"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        style="@style/ItemText.Black.Larger"/>
+        android:paddingLeft="@dimen/margin_large"
+        android:paddingRight="@dimen/margin_large"
+        android:paddingTop="@dimen/margin_larger"
+        android:paddingBottom="@dimen/margin_larger"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+            <TextView style="@style/Chart.Lable"
+                android:id="@+id/chart_fuel_lable"
+                android:text="油耗曲线图"/>
+
+            <View style="@style/Chart.Divider"
+                android:layout_toRightOf="@id/chart_fuel_lable"
+                android:layout_alignBottom="@id/chart_fuel_lable"
+                />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart_fuel_linechart"
+                android:layout_below="@id/chart_fuel_lable"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:layout_width="match_parent"
+                android:layout_height="160dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/margin_large">
+
+            <TextView style="@style/Chart.Lable"
+                android:id="@+id/chart_consumer_lable"
+                android:text="消费统计图"/>
+
+            <View style="@style/Chart.Divider"
+                android:layout_toRightOf="@id/chart_consumer_lable"
+                android:layout_alignBottom="@id/chart_consumer_lable"
+                />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart_consumer_linechart"
+                android:layout_below="@id/chart_consumer_lable"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:layout_width="match_parent"
+                android:layout_height="160dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_large">
+
+            <TextView style="@style/Chart.Lable"
+                android:id="@+id/chart_percentage_lable"
+                android:text="消费百分比"/>
+
+            <View style="@style/Chart.Divider"
+                android:layout_toRightOf="@id/chart_percentage_lable"
+                android:layout_alignBottom="@id/chart_percentage_lable"
+                />
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/chart_percentage_piechart"
+                android:layout_below="@id/chart_percentage_lable"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:layout_centerHorizontal="true"
+                android:layout_width="match_parent"
+                android:layout_height="280dp" />
+        </RelativeLayout>
+
+    </LinearLayout>
+</ScrollView>
