--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -150,6 +150,25 @@
         <item name="android:gravity">center</item>
         <item name="android:background">@color/colorAccent</item>
     </style>
+    <style name="Chart.ItemLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_marginLeft">@dimen/margin_normal</item>
+        <item name="android:layout_marginRight">@dimen/margin_normal</item>
+        <item name="android:layout_marginTop">@dimen/margin_normal</item>
+    </style>
+    <style name="Chart.ItemLable">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:gravity">left</item>
+    </style>
+    <style name="Chart.ItemLable.Value">
+        <item name="android:textColor">@color/primary_light</item>
+    </style>
     <style name="Chart.Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">2dp</item>
