--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="@dimen/margin_large"
         android:layout_below="@id/item_timeline_content"
         android:layout_toRightOf="@id/item_timeline_icon_layout"
-        android:textSize="@dimen/font_item_money"
+        android:textSize="@dimen/font_larger"
         />
 
     <View
@@ -71,7 +71,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/item_timeline_icon_layout"
         android:layout_alignLeft="@id/item_timeline_icon_layout"
-        android:layout_marginLeft="22dp"
+        android:layout_marginLeft="23dp"
         android:background="@color/timeline_blue"
         />
 
