charts add table info

--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -113,5 +113,12 @@
                 android:layout_height="240dp" />
         </RelativeLayout>
 
+        <LinearLayout
+            android:id="@+id/chart_percentage_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:orientation="vertical"/>
+
     </LinearLayout>
 </ScrollView>
